# tome

./: CLAUDE.md  README.md  TODO.md  package.json  pnpm-lock.yaml  terminal-app-prd.md  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: TODO.md  terminal-app-prd.md
scripts/: dev.sh
src/: App.css  App.tsx  main.tsx  sample.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/shell-integration/: tome.zsh
src-tauri/src/: agent_registry.rs  completion.rs  lib.rs  menu_bar.rs  pty.rs
src/components/: AgentLogoBadge.test.tsx  AgentLogoBadge.tsx  Block.outputLinks.test.tsx  Block.test.ts  Block.tsx  BlockList.test.tsx  BlockList.tsx  DiagnosticErrorBoundary.test.tsx  DiagnosticErrorBoundary.tsx  FullscreenTerminal.test.tsx  FullscreenTerminal.tsx  InputEditor.test.tsx  InputEditor.tsx  PaneView.outputLinks.test.tsx  PaneView.test.tsx  PaneView.tsx  Resizer.tsx  RunningCommandBar.test.tsx  RunningCommandBar.tsx  SearchOverlay.tsx  Settings.test.tsx  Settings.tsx  SplitPaneContainer.test.tsx  SplitPaneContainer.tsx  TabBar.test.tsx  TabBar.tsx  WelcomeView.css  WelcomeView.tsx  inputCompletion.test.ts  inputCompletion.ts  inputHistory.ts  shellHighlight.ts  shellLanguage.ts  shellValidation.test.ts  shellValidation.ts
src/hooks/: sessionState.test.ts  sessionState.ts  useCommandHistory.ts  useSplitPanes.ts  useTabs.test.ts  useTabs.ts  useTerminalSession.test.tsx  useTerminalSession.ts  (+1 more)
superdesign/: gallery.html
(+37 files in other folders)
