[package]
name = "tome"
version = "0.1.0"
description = "A lightweight block-based terminal"
authors = ["chenjie"]
edition = "2021"

[lib]
name = "tome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vte = "0.13"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-fs = "2.4.5"
base64 = "0.22"
